--- a/service/baiChance.html
+++ b/service/baiChance.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>BaiChance - 好运当头</title>
-<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
 <style>
 body {
 	background-color: #cccccc;
