记录工场（Record）增加检验功能

--- a/service/css.html
+++ b/service/css.html
@@ -100,6 +100,11 @@ body {
 		<span style="background:#FF6600;">FF6600</span>
 		<span style="background:#F06000;">F06000</span>
 		<span style="background:#F04000;">F04000</span>
+		<span style="background:#FFFCF5;">FFFCF5</span>
+		<span style="background:#FFF7E8;">FFF7E8</span>
+		<span style="background:#F2D2B5;">F2D2B5</span>
+		<span style="background:#D0AD9A;">D0AD9A</span>
+		<span style="background:#834B27;">834B27</span>
 		<input maxlength="6" onblur="$('#pick').text(this.value);$('#pick').css('background', '#'+this.value);" />
 		<span id="pick">T</span>
 	</div><br>
