--- a/service/js.html
+++ b/service/js.html
@@ -14,7 +14,7 @@ Array.prototype.each = function(action) {
 	if (action == null || action.)
 }
 Document.prototype.pick = Element.prototype.pick = function(item, last) {
-	return Sizzle(item, this, last);
+	return this.querySelector(item);
 }
 Element.prototype.get = function(item) {
 	if (item == null || ! item) {
